[gd_scene load_steps=10 format=3 uid="uid://d0ys2qg8hr8km"]

[ext_resource type="Script" uid="uid://cr5w6w6hf4esl" path="res://addons/resource_manager/resource_editor.gd" id="1_df8xy"]

[sub_resource type="Theme" id="Theme_gqjks"]
default_font_size = 12

[sub_resource type="DPITexture" id="DPITexture_4l5jb"]
_source = "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"16\" height=\"16\"><path fill=\"#e0e0e0\" d=\"M5 8a4 4 0 1 1 4 4v2a6 6 0 1 0-6-6H1l3 4 3-4z\"/></svg>
"
color_map = {
Color(1, 0.37254903, 0.37254903, 1): Color(1, 0.47, 0.42, 1),
Color(0.37254903, 1, 0.5921569, 1): Color(0.45, 0.95, 0.5, 1),
Color(1, 0.8666667, 0.39607844, 1): Color(1, 0.87, 0.4, 1)
}

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_df8xy"]

[sub_resource type="DPITexture" id="DPITexture_jn3k6"]
_source = "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"16\" height=\"16\"><path fill=\"#e0e0e0\" d=\"M8 9H1V2l2 2a3.875 5 30 0 1 9 11 3.5 5 10 0 0-6-8z\"/></svg>
"
color_map = {
Color(1, 0.37254903, 0.37254903, 1): Color(1, 0.47, 0.42, 1),
Color(0.37254903, 1, 0.5921569, 1): Color(0.45, 0.95, 0.5, 1),
Color(1, 0.8666667, 0.39607844, 1): Color(1, 0.87, 0.4, 1)
}

[sub_resource type="DPITexture" id="DPITexture_gqvp5"]
_source = "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"16\" height=\"16\"><path fill=\"#e0e0e0\" d=\"M8 9h7V2l-2 2a6.927 8.938-30 0 0-9 11 4.364 6.234-10 0 1 6-8z\"/></svg>
"
color_map = {
Color(1, 0.37254903, 0.37254903, 1): Color(1, 0.47, 0.42, 1),
Color(0.37254903, 1, 0.5921569, 1): Color(0.45, 0.95, 0.5, 1),
Color(1, 0.8666667, 0.39607844, 1): Color(1, 0.87, 0.4, 1)
}

[sub_resource type="DPITexture" id="DPITexture_3nm0r"]
_source = "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"16\" height=\"16\"><path fill=\"#e0e0e0\" d=\"M3 1a2 2 0 0 0-2 2v10a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V4l-3-3h-1v6H3zm1 0v5h3V1zm4 8a1 1 0 0 1 0 4 1 1 0 0 1 0-4z\"/></svg>
"
color_map = {
Color(1, 0.37254903, 0.37254903, 1): Color(1, 0.47, 0.42, 1),
Color(0.37254903, 1, 0.5921569, 1): Color(0.45, 0.95, 0.5, 1),
Color(1, 0.8666667, 0.39607844, 1): Color(1, 0.87, 0.4, 1)
}

[sub_resource type="DPITexture" id="DPITexture_cu2hq"]
_source = "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"16\" height=\"16\"><path fill=\"#e0e0e0\" d=\"m7 1v6h-6v2h6v6h2v-6h6v-2h-6v-6z\"/></svg>
"
color_map = {
Color(1, 0.37254903, 0.37254903, 1): Color(1, 0.47, 0.42, 1),
Color(0.37254903, 1, 0.5921569, 1): Color(0.45, 0.95, 0.5, 1),
Color(1, 0.8666667, 0.39607844, 1): Color(1, 0.87, 0.4, 1)
}

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_en5mg"]

[node name="ResourceEditor" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource("Theme_gqjks")
script = ExtResource("1_df8xy")

[node name="EditorContainer" type="MarginContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="EditorContainer"]
layout_mode = 2

[node name="TopActions" type="HBoxContainer" parent="EditorContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="EditorContainer/VBoxContainer/TopActions"]
layout_mode = 2
text = "Resource Type:"

[node name="ResourceTypes" type="OptionButton" parent="EditorContainer/VBoxContainer/TopActions"]
unique_name_in_owner = true
custom_minimum_size = Vector2(192, 0)
layout_mode = 2
selected = 0
item_count = 1
popup/item_0/text = "FooBar"
popup/item_0/id = 0

[node name="Reload" type="Button" parent="EditorContainer/VBoxContainer/TopActions"]
unique_name_in_owner = true
layout_mode = 2
text = "Reload"
icon = SubResource("DPITexture_4l5jb")

[node name="VSeparator" type="VSeparator" parent="EditorContainer/VBoxContainer/TopActions"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/separator = SubResource("StyleBoxEmpty_df8xy")

[node name="Undo" type="Button" parent="EditorContainer/VBoxContainer/TopActions"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Undo"
disabled = true
icon = SubResource("DPITexture_jn3k6")

[node name="Redo" type="Button" parent="EditorContainer/VBoxContainer/TopActions"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Redo"
disabled = true
icon = SubResource("DPITexture_gqvp5")

[node name="Save" type="Button" parent="EditorContainer/VBoxContainer/TopActions"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Save All"
icon = SubResource("DPITexture_3nm0r")

[node name="HSeparator" type="HSeparator" parent="EditorContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Title" type="Label" parent="EditorContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"HeaderLarge"
text = "Foo Bar"
horizontal_alignment = 1

[node name="Main" type="GridContainer" parent="EditorContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 0
columns = 2

[node name="ScrollHeader" type="ScrollContainer" parent="EditorContainer/VBoxContainer/Main"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
horizontal_scroll_mode = 3
vertical_scroll_mode = 0

[node name="ColumnHeaders" type="HBoxContainer" parent="EditorContainer/VBoxContainer/Main/ScrollHeader"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TopRight" type="Control" parent="EditorContainer/VBoxContainer/Main"]
layout_mode = 2

[node name="ScrollContents" type="ScrollContainer" parent="EditorContainer/VBoxContainer/Main"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
horizontal_scroll_mode = 2
vertical_scroll_mode = 3

[node name="Data" type="VBoxContainer" parent="EditorContainer/VBoxContainer/Main/ScrollContents"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ScrollActions" type="ScrollContainer" parent="EditorContainer/VBoxContainer/Main"]
unique_name_in_owner = true
layout_mode = 2
horizontal_scroll_mode = 0
vertical_scroll_mode = 2

[node name="ItemActions" type="VBoxContainer" parent="EditorContainer/VBoxContainer/Main/ScrollActions"]
unique_name_in_owner = true
layout_mode = 2

[node name="Actions" type="HBoxContainer" parent="EditorContainer/VBoxContainer"]
layout_mode = 2

[node name="AddRow" type="Button" parent="EditorContainer/VBoxContainer/Actions"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Add New Resource"
icon = SubResource("DPITexture_cu2hq")

[node name="Footer" type="HBoxContainer" parent="EditorContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 12
alignment = 1

[node name="SourceCode" type="LinkButton" parent="EditorContainer/VBoxContainer/Footer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 0.5019608)
theme_override_font_sizes/font_size = 12
text = "Source"
uri = "https://github.com/IMP1/godot-resource-manager"

[node name="Help" type="LinkButton" parent="EditorContainer/VBoxContainer/Footer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 0.5019608)
theme_override_font_sizes/font_size = 12
text = "Help"
uri = "https://github.com/IMP1/godot-resource-manager?tab=readme-ov-file#godot-resource-manager-v010"

[node name="VSeparator" type="VSeparator" parent="EditorContainer/VBoxContainer/Footer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/separator = SubResource("StyleBoxEmpty_en5mg")

[node name="Version" type="Label" parent="EditorContainer/VBoxContainer/Footer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 0.5019608)
theme_override_font_sizes/font_size = 12
text = "Godot Resource Manager v0.1.0"

[node name="NewResourcePopup" type="PopupPanel" parent="."]
unique_name_in_owner = true
oversampling_override = 1.0
title = "Add Resource"
position = Vector2i(0, 36)
size = Vector2i(256, 112)
borderless = false
min_size = Vector2i(256, 0)

[node name="VBoxContainer" type="VBoxContainer" parent="NewResourcePopup"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = 252.0
offset_bottom = 108.0
grow_horizontal = 2
grow_vertical = 2

[node name="NewResourceFolder" type="OptionButton" parent="NewResourcePopup/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
selected = 0
item_count = 2
popup/item_0/text = "res://data/fish"
popup/item_0/id = 0
popup/item_1/text = "res://data/rods"
popup/item_1/id = 1

[node name="ResourceFilename" type="HBoxContainer" parent="NewResourcePopup/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2
theme_override_constants/separation = 0

[node name="NewResourceFilename" type="LineEdit" parent="NewResourcePopup/VBoxContainer/ResourceFilename"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "filename_1"
alignment = 2

[node name="Filetype" type="Label" parent="NewResourcePopup/VBoxContainer/ResourceFilename"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 0.627451)
text = ".tres"

[node name="NewResourceError" type="Label" parent="NewResourcePopup/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
horizontal_alignment = 2

[node name="Actions" type="HBoxContainer" parent="NewResourcePopup/VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="CancelNewResource" type="Button" parent="NewResourcePopup/VBoxContainer/Actions"]
unique_name_in_owner = true
layout_mode = 2
text = "Cancel"

[node name="ConfirmNewResource" type="Button" parent="NewResourcePopup/VBoxContainer/Actions"]
unique_name_in_owner = true
layout_mode = 2
disabled = true
text = "Confirm"

[node name="SavingIndicator" type="VBoxContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="SavingIndicator"]
layout_mode = 2
text = "Saving"
horizontal_alignment = 1

[node name="SavingProgress" type="ProgressBar" parent="SavingIndicator"]
unique_name_in_owner = true
layout_mode = 2
